[package]
name = "fs-err"
description = "📂 Drop-in ponyfill with better error messages for std::fs, std::env, and more"
version = "3.0.0"
edition = "2021"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/fs-err"
documentation = "https://docs.rs/fs-err"
categories = ["command-line-interface", "filesystem"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []
# https://github.com/rust-lang/rust/issues/59028
# https://internals.rust-lang.org/t/setting-cfg-nightly-on-nightly-by-default/1893/7
# https://stackoverflow.com/questions/49247618/check-whether-compiler-is-nightly-at-compile-time
nightly = ["fs_try_exists", "wasi_ext", "dir_entry_ext2", "structural_match", "derive_more/nightly", "raw_os_error_ty"]
fs_try_exists = []
wasi_ext = []
dir_entry_ext2 = []
structural_match = []
raw_os_error_ty = []

[dependencies]
delegate = "0.12.0"
derive_more = "0.99.17"
tokio = { version = "1.37.0", optional = true, default_features = false, features = ["fs"] }

[dev-dependencies]
error_reporter = "1.0.0"
